<resources>
    <string name="app_name">To-Do</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="loginActivity_login">LOGIN</string>
    <string name="login_button">LOGIN</string>
    <string name="signup_button">Register</string>
    <string name="forgotpassword_textview">Forgot password?</string>
    <string name="username_hint">Username</string>
    <string name="signinwithgoogle_button">SIGN IN WITH GOOGLE</string>
    <string name="forgotpass_close">Close</string>
    <string name="forgotpass_checkemail">Check your email.</string>
    <string name="forgotpass_send">SEND</string>
    <string name="forgotpass_notifytextview">Enter your email address to reset your password.</string>
    <string name="forgotpass_emailhint">Email</string>
    <string name="optionsmenu_items1">Night mode</string>
    <string name="optionsmenu_items2">Language</string>
    <string name="optionsmenu_items3">About</string>
    <string name="optionsmenu_items4">Log out</string>
    <string name="fab_calendar">Calendar</string>
    <string name="fab_todo">To-Do</string>
    <string name="fab_note">Note</string>
    <string name="createtodo_edittexthint">Go to gym!!!</string>
    <string name="lstnote_enter_note">Note</string>
    <string name="lstnote_enter_title">Title</string>
</resources>
