<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_background"
    tools:context=".LoginActivity"
    tools:layout_editor_absoluteY="25dp">


    <TextView
        android:id="@+id/activitylogin_forgotpassword_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="201dp"
        android:layout_marginEnd="30dp"
        android:text="@string/forgotpassword_textview"
        android:textColor="#35495E"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activitylogin_linearlayout" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="94dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="143dp"
        android:background="@drawable/activitylogin_register_button"
        android:text="@string/login_button"
        android:textAllCaps="false"
        android:textColor="#35495E"
        app:layout_constraintBottom_toTopOf="@+id/activitylogin_relativelayout"
        app:layout_constraintStart_toStartOf="@+id/activitylogin_relativelayout"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/activitylogin_linearlayout"
        android:layout_width="348dp"
        android:layout_height="0dp"
        android:layout_marginBottom="11dp"
        android:layout_marginStart="1dp"
        android:background="@drawable/loginactivity_custom_relativelayout"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/activitylogin_forgotpassword_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2">

        <EditText
            android:id="@+id/editText4"
            android:layout_width="262dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/activitylogin_email_image"
            android:hint="@string/username_hint"
            android:inputType="textPersonName"
            android:textColor="#35495E"
            android:textColorHint="#35495E" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="292dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/activitylogin_email_sign"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:textColor="#35495E"
            android:textColorHint="#35495E" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="294dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="21dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/activitylogin_password_image"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColor="#35495E"
            android:textColorHint="#35495E" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/activitylogin_relativelayout"
        android:layout_width="50dp"
        android:layout_height="0dp"
        android:layout_marginBottom="324dp"
        android:background="@drawable/activitylogin_circle_relativelayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/activitylogin_linearlayout"
        app:layout_constraintStart_toEndOf="@+id/activitylogin_linearlayout"
        app:layout_constraintTop_toBottomOf="@+id/button2">

        <Button
            android:id="@+id/button4"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:width="20dp"
            android:height="20dp"
            android:background="@drawable/entry_button"
            android:padding="0dp" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>