<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TodoMainPage"
    tools:layout_editor_absoluteY="25dp">

    <android.support.v7.widget.Toolbar
        android:id="@+id/todomainpage_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFA726"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="#FFFFFF" />

    <android.support.design.widget.TabLayout
        android:id="@+id/activitytodo_tabLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/coordinatorLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todomainpage_toolbar"
        app:layout_constraintVertical_bias="0.0"
        app:tabGravity="fill"
        app:tabIndicatorColor="#ff24">
    </android.support.design.widget.TabLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/activitytodo_viewPager"
        android:layout_width="match_parent"
        android:layout_height="546dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activitytodo_tabLayout">

    </android.support.v4.view.ViewPager>


    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:paddingBottom="16dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="100dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/calendarFabTextview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:padding="8dp"
                android:text="@string/fab_calendar"
                android:textColor="#3C3C3C"
                android:textSize="20sp"
                android:visibility="invisible" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_calendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:elevation="6dp"
                android:onClick="calendarLogin"
                android:visibility="invisible"
                app:fabSize="normal"
                app:pressedTranslationZ="12dp"
                app:srcCompat="@mipmap/fabcalendar" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="185dp"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="47dp">

            <TextView
                android:id="@+id/noteFabTextview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:padding="8dp"
                android:text="@string/fab_note"
                android:textColor="#3C3C3C"
                android:textSize="20sp"
                android:visibility="invisible" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_makenote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:elevation="6dp"
                android:onClick="noteLogin"
                android:visibility="invisible"
                app:fabSize="normal"
                app:pressedTranslationZ="12dp"
                app:srcCompat="@mipmap/fabtext" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="270dp"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="47dp">

            <TextView
                android:id="@+id/todoFabTextview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:padding="8dp"
                android:text="@string/fab_todo"
                android:textColor="#3C3C3C"
                android:textSize="20sp"
                android:visibility="invisible" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_todo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:elevation="6dp"
                android:onClick="todoLogin"
                android:visibility="invisible"
                app:fabSize="normal"
                app:pressedTranslationZ="12dp"
                app:srcCompat="@mipmap/fabtodo" />

        </LinearLayout>


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="15dp"
            android:elevation="6dp"
            android:onClick="fabOnClick"
            app:fabSize="normal"
            app:pressedTranslationZ="12dp"
            app:srcCompat="@drawable/activitytodo_addicon" />


    </android.support.design.widget.CoordinatorLayout>

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.83" />


</android.support.constraint.ConstraintLayout>